--- a/testing_notebook.ipynb
+++ b/testing_notebook.ipynb
@@ -2,27 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n"
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -172,7 +162,7 @@
        " 'hyperparams': {'ncells': 5000, 'is_multiome': False}}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +186,7 @@
        "(5000, 15)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -252,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -269,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -280,7 +270,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ELBO: 6.972898562  : 100%|██████████| 20/20 [00:01<00:00, 14.15it/s] "
+      "ELBO: 7.218102623  : 100%|██████████| 20/20 [00:01<00:00, 13.97it/s] "
      ]
     },
     {
@@ -300,13 +290,12 @@
     }
    ],
    "source": [
-    "ll = interface.run(steps = 20, param_optimizer = {\"lr\":0.1})\n",
-    "\n"
+    "ll = interface.run(steps = 20, param_optimizer = {\"lr\":0.1})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -324,7 +313,6 @@
     }
    ],
    "source": [
-    "\n",
     "import numpy as np\n",
     "\n",
     "\n",
@@ -334,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -344,10 +332,10 @@
     {
      "data": {
       "text/plain": [
-       "1736"
+       "1117"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -368,10 +356,10 @@
     {
      "data": {
       "text/plain": [
-       "1736"
+       "1117"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,17 +370,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mixture_weights': array([0.15130064, 0.12047607, 0.72822326], dtype=float32),\n",
+       " 'NB_size_rna': array([29.572866, 29.572866, 29.572866, 29.572866, 29.572866, 29.572866,\n",
+       "        29.572866, 29.572866, 29.572866, 29.572866, 29.572866, 29.572866,\n",
+       "        29.572866, 29.572866, 29.572866], dtype=float32),\n",
+       " 'segment_factor_rna': array([69.07002 , 70.03304 , 71.405876, 67.96777 , 82.21541 , 74.76908 ,\n",
+       "        67.96777 , 67.96777 , 67.96777 , 78.02877 , 78.8904  , 67.976364,\n",
+       "        74.759636, 74.76908 , 80.389626], dtype=float32),\n",
+       " 'NB_size_atac': array([150., 150., 150., 150., 150., 150., 150., 150., 150., 150., 150.,\n",
+       "        150., 150., 150., 150.], dtype=float32),\n",
+       " 'segment_factor_atac': array([18.49565, 18.49565, 18.49565, 18.49565, 18.49565, 18.49565,\n",
+       "        18.49565, 18.49565, 18.49565, 18.49565, 18.49565, 18.49565,\n",
+       "        18.49565, 18.49565, 18.49565], dtype=float32),\n",
+       " 'CNV_probabilities': array([[[0.00730497, 0.00730497, 0.01110983, 0.48714015, 0.48714015],\n",
+       "         [0.00731977, 0.00731977, 0.00910599, 0.4881273 , 0.4881273 ],\n",
+       "         [0.00725417, 0.00725417, 0.01798633, 0.48375267, 0.48375267],\n",
+       "         [0.0072703 , 0.0072703 , 0.01580286, 0.48482832, 0.48482832],\n",
+       "         [0.00713459, 0.00713459, 0.03417377, 0.47577858, 0.47577858],\n",
+       "         [0.00722452, 0.00722452, 0.02199979, 0.48177564, 0.48177564],\n",
+       "         [0.00731327, 0.00731327, 0.00998502, 0.48769423, 0.48769423],\n",
+       "         [0.007198  , 0.007198  , 0.02558984, 0.4800071 , 0.4800071 ],\n",
+       "         [0.00732032, 0.00732032, 0.00903094, 0.48816422, 0.48816422],\n",
+       "         [0.00727608, 0.00727608, 0.01501967, 0.48521408, 0.48521408],\n",
+       "         [0.00724801, 0.00724801, 0.0188199 , 0.48334205, 0.48334205],\n",
+       "         [0.00730828, 0.00730828, 0.01066146, 0.487361  , 0.487361  ],\n",
+       "         [0.01226637, 0.01226637, 0.03582871, 0.46981928, 0.46981928],\n",
+       "         [0.00732632, 0.00732632, 0.00821971, 0.48856384, 0.48856384],\n",
+       "         [0.00728533, 0.00728533, 0.01376805, 0.48583066, 0.48583066]],\n",
+       " \n",
+       "        [[0.01355585, 0.01375319, 0.0161011 , 0.476298  , 0.48029187],\n",
+       "         [0.01663017, 0.01569738, 0.01266026, 0.49300104, 0.46201107],\n",
+       "         [0.01158763, 0.01158763, 0.0208039 , 0.4726433 , 0.48337764],\n",
+       "         [0.01682526, 0.01723741, 0.02342626, 0.46289387, 0.47961718],\n",
+       "         [0.02886113, 0.02972941, 0.03043483, 0.45055324, 0.46042144],\n",
+       "         [0.01160216, 0.01204098, 0.03130988, 0.46516672, 0.47988018],\n",
+       "         [0.02151795, 0.02244604, 0.03486663, 0.4525517 , 0.46861768],\n",
+       "         [0.03745185, 0.03815531, 0.06157252, 0.42929405, 0.43352634],\n",
+       "         [0.01264121, 0.01320811, 0.01835942, 0.46852076, 0.48727044],\n",
+       "         [0.01154733, 0.01180102, 0.02125238, 0.47370276, 0.48169658],\n",
+       "         [0.02060677, 0.02060677, 0.04041665, 0.45918494, 0.45918494],\n",
+       "         [0.03525532, 0.03487598, 0.06521703, 0.44020152, 0.4244501 ],\n",
+       "         [0.01530388, 0.01551611, 0.01400071, 0.4733305 , 0.4818488 ],\n",
+       "         [0.02937872, 0.03044863, 0.06263315, 0.43277732, 0.4447622 ],\n",
+       "         [0.02423376, 0.02365617, 0.06252831, 0.45427838, 0.43530336]],\n",
+       " \n",
+       "        [[0.4072605 , 0.46431962, 0.04346953, 0.03984915, 0.04510128],\n",
+       "         [0.4616178 , 0.46019045, 0.03403055, 0.02213184, 0.02202932],\n",
+       "         [0.37231195, 0.39340368, 0.15376545, 0.03928798, 0.04123097],\n",
+       "         [0.33280855, 0.37883133, 0.2220324 , 0.03124828, 0.0350795 ],\n",
+       "         [0.43668362, 0.45060548, 0.05132151, 0.03037953, 0.03100989],\n",
+       "         [0.46650133, 0.44535375, 0.04236617, 0.02349659, 0.02228233],\n",
+       "         [0.42928526, 0.42089632, 0.06105605, 0.04518694, 0.04357549],\n",
+       "         [0.38518518, 0.40241605, 0.08110493, 0.06449477, 0.06679913],\n",
+       "         [0.46499252, 0.4839296 , 0.02545496, 0.01262007, 0.01300289],\n",
+       "         [0.43902615, 0.43902615, 0.03744512, 0.0422513 , 0.0422513 ],\n",
+       "         [0.40703318, 0.4500172 , 0.07012725, 0.03478799, 0.03803446],\n",
+       "         [0.39826646, 0.43870664, 0.09316762, 0.03344544, 0.03641387],\n",
+       "         [0.4258379 , 0.45415676, 0.0282649 , 0.04458173, 0.0471586 ],\n",
+       "         [0.46049064, 0.44867474, 0.04621665, 0.02264246, 0.02197553],\n",
+       "         [0.4172404 , 0.48673505, 0.06317773, 0.01525406, 0.01759268]]],\n",
+       "       dtype=float32),\n",
+       " 'CNA': array([[4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4],\n",
+       "        [5, 4, 5, 5, 5, 5, 5, 5, 5, 5, 4, 4, 5, 5, 4],\n",
+       "        [2, 1, 2, 2, 2, 1, 1, 2, 2, 1, 2, 2, 2, 1, 2]]),\n",
+       " 'assignment_probs_atac': array([[1.2173484e-06, 0.0000000e+00, 1.1942219e-06, ..., 1.0000000e+00,\n",
+       "         0.0000000e+00, 2.0167827e-08],\n",
+       "        [1.0000000e+00, 0.0000000e+00, 7.7912310e-20, ..., 1.1715704e-06,\n",
+       "         1.0000000e+00, 3.0224273e-22],\n",
+       "        [0.0000000e+00, 1.0000000e+00, 1.0000000e+00, ..., 0.0000000e+00,\n",
+       "         0.0000000e+00, 1.0000000e+00]], dtype=float32),\n",
+       " 'assignment_atac': array([1, 2, 2, ..., 0, 1, 2]),\n",
+       " 'assignment_probs_rna': array([[1.2173484e-06, 0.0000000e+00, 1.1942219e-06, ..., 1.0000000e+00,\n",
+       "         0.0000000e+00, 2.0167827e-08],\n",
+       "        [1.0000000e+00, 0.0000000e+00, 7.7912310e-20, ..., 1.1715704e-06,\n",
+       "         1.0000000e+00, 3.0224273e-22],\n",
+       "        [0.0000000e+00, 1.0000000e+00, 1.0000000e+00, ..., 0.0000000e+00,\n",
+       "         0.0000000e+00, 1.0000000e+00]], dtype=float32),\n",
+       " 'assignment_rna': array([1, 2, 2, ..., 0, 1, 2])}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr"
+   ]
   },
   {
    "cell_type": "code",
@@ -404,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "congas_reticulate",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -418,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
